envoy/conf/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          http_filters:
          - name: envoy.filters.http.router
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  path: "/serviceA"
                route:
                  cluster: service_a
              - match:
                  path: "/serviceB"
                route:
                    cluster: service_b
              - match:
                  path: "/serviceCD"
                route:
                  cluster: service_cd
              - match:
                  prefix: "/"
                direct_response:
                  status: 404
                  body:
                    inline_string: "page not found"
  clusters:
    - name: service_a
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_a
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: serviceA
                  port_value: 3000
    - name: service_b
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_b
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: serviceB
                  port_value: 3000
    - name: service_cd
      connect_timeout: 0.25s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_cd
        endpoints:
        - lb_endpoints:
          - endpoint:
              health_check_config:
                port_value: 3000
              address:
                socket_address:
                  address: serviceCD
                  port_value: 3000
          - endpoint:
              health_check_config:
                port_value: 3000
              address:
                socket_address:
                  address: serviceCD
                  port_value: 3000
